Final commit for iteration/1-core-infrastructure/vite-migration branch chore: Transfer old CRA components to new vite setup + verify styles
- Transfered old CRA components to new vite components
- Verified old styles work an look the same in dev server
- Added updated README.md
- Updated CHANGELOG.md

Issue Reference: Migrate from Create React App to Vite [#109](https://github.com/fustahson-lab/dopeonomics/issues/109)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#4a5568" />
-    <link href="/src/styles/base.css" rel="stylesheet">
     <meta
       name="description"
       content="Dopeonomics - Building empires, one strain at a time. An unofficial companion app for Schedule 1"
@@ -13,10 +12,17 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <title>Dopeonomics - Strain Creator</title>
   </head>
-  <body>
+  <body class="bg-gradient-to-br from-gray-100 to-gray-50 text-gray-800 min-h-screen">
+    <div style="padding: '2rem'">
+      <h1>Fustashon's Dopeonomics - Vite Rebuild by Anymuz</h1>
+      <p>Welcome to the upgraded setup.
+         Original design and concept by Fustashon, mirgation to vite implemented by Anymuz</p>
+    </div>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-<!--Originally from the public/index.html in the CRA solutin. Credit to Fustashon -->
+<!-- Originally adapted from CRA's public/index.html, credit to Fustashon -->
+
