Final commit for iteration/1-core-infrastructure/gamestore-refactor Refactor: Rebuilt the entire app deisgn and layout to be more modular and maintainable Backlog: Focus on refactor has left front-end visuals missing and dummy data is used.
Notes: The way the original was designed was too large and hard to maintain or scale and so a new archetecture was adopted.

Commit changes
- Rebuilt project structure with an intermediate directory system (plan to organise further)
- Implemented GameStore fully with Zustand
- Seperated components to be more independent of each other
- Split GameStore into slices with data methods relative to that area
- Produced hooks for easy expansion and use of GameStore
- Stashed and temporarily removed most styles and visual aspects (to be readded)
- Multiple changes to directory layout and vite configuration

Issue References:
Convert productionPlans to use GameStore [[#80](https://github.com/fustahson-lab/dopeonomics/issues/80)]
Refactor SupplyManagementTab to use useGameStore [[#81](https://github.com/fustahson-lab/dopeonomics/issues/81)]
Transition to Container and Presentational Architecture [[#111](https://github.com/Anymuz/dopeonomics/issues/111)]

Ready for PR.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <title>Dopeonomics - Strain Creator</title>
   </head>
-  <body class="bg-gradient-to-br from-gray-100 to-gray-50 text-gray-800 min-h-screen">
+  <body className="bg-gradient-to-br from-gray-100 to-gray-50 text-gray-800 min-h-screen">
     <div style="padding: '2rem'">
       <h1>Fustashon's Dopeonomics - Vite Rebuild by Anymuz</h1>
       <p>Welcome to the upgraded setup.
